--- a/NM_Project_Code.ipynb
+++ b/NM_Project_Code.ipynb
@@ -1274,7 +1274,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Count Plot"
+        "Class Distribution"
       ],
       "metadata": {
         "id": "faytOi2G1K2b"
